# node-components

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUTURE_WORK.md  README.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
crates/blobber/: Cargo.toml  README.md
crates/blobber/src/: block_data.rs  builder.rs  cache.rs  config.rs  error.rs  fetch.rs  lib.rs  shim.rs  utils.rs
crates/blobber/src/blobs/: builder.rs  cache.rs  error.rs  fetch.rs  mod.rs  source.rs
crates/blobber/src/blobs/sources/: beacon.rs  explorer.rs  memory.rs  mod.rs  pylon.rs
crates/blobber/src/coder/: error.rs  mod.rs  trait.rs
crates/block-processor/: Cargo.toml  README.md
crates/block-processor/src/: alias.rs  lib.rs  metrics.rs  utils.rs
crates/block-processor/src/v1/: mod.rs  processor.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: aliases.rs  chain.rs  consistency.rs  convert.rs  lib.rs  provider.rs  tables.rs  traits.rs
crates/db/src/journal/: ingestor.rs  mod.rs  provider.rs  trait.rs
crates/db/tests/: db.rs
crates/db/tests/common/: mod.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: lib.rs  local.genesis.json  mainnet.genesis.json  mainnet.host.genesis.json  parmigiana.genesis.json  parmigiana.host.genesis.json  pecorino.genesis.json
crates/host-reth/: Cargo.toml  README.md
crates/host-reth/src/: alias.rs  backfill.rs  blob_source.rs  chain.rs  config.rs  error.rs  lib.rs  metrics.rs  notifier.rs  shim.rs
crates/host-rpc/: Cargo.toml  README.md
crates/host-rpc/src/: alias.rs  builder.rs  config.rs  error.rs  latest.rs  lib.rs  metrics.rs  notifier.rs  segment.rs
crates/journaler/: Cargo.toml
crates/node/: Cargo.toml  README.md
crates/node-config/: Cargo.toml  README.md
crates/node-config/src/: core.rs  lib.rs  rpc.rs  storage.rs  test_utils.rs
crates/node-tests/: Cargo.toml  README.md
crates/node-tests/src/: aliases.rs  blob_test_utils.rs  constants.rs  context.rs  convert.rs  fuzz.rs  lib.rs  rpc.rs  utils.rs
crates/node-tests/tests/: basic.rs  db.rs  exit.rs  fuzz.rs  host_events.rs  multiple-blocks.rs  orders.rs  reorg.rs  rpc.rs  rpc_debug.rs  submit-tx.rs
crates/node-tests/tests/artifacts/: Counter.sol  blob.json  cl_blob.json  cl_blob_tx.json  pylon_blob.json
crates/node-types/: Cargo.toml  README.md
crates/node-types/src/: block.rs  lib.rs  notification.rs  notifier.rs  utils.rs
crates/node/src/: alias.rs  builder.rs  lib.rs  metrics.rs  node.rs  rpc.rs  serve.rs  status.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc-storage/: Cargo.toml  FUTURE-EVALUATION.md  README.md
crates/rpc-storage/src/: config.rs  ctx.rs  eth.rs  gas_oracle.rs  lib.rs  resolve.rs
crates/rpc-storage/src/config/: ctx.rs  gas_oracle.rs  resolve.rs  rpc_config.rs
crates/rpc-storage/src/debug/: endpoints.rs  error.rs  mod.rs  tracer.rs  types.rs
crates/rpc-storage/src/eth/: endpoints.rs  error.rs  helpers.rs  mod.rs  types.rs
crates/rpc-storage/src/interest/: filters.rs  kind.rs  mod.rs  subs.rs
crates/rpc-storage/src/signet/: endpoints.rs  error.rs  mod.rs
crates/rpc-storage/tests/: eth_rpc.rs
crates/rpc/examples/: filler.rs  order.rs
crates/rpc/src/: config.rs  ctx.rs  lib.rs  receipts.rs  serve.rs  util.rs  utils.rs
crates/rpc/src/config/: chain_notifier.rs  ctx.rs  gas_oracle.rs  mod.rs  resolve.rs  rpc_config.rs
crates/rpc/src/ctx/: fee_hist.rs  full.rs  mod.rs  signet.rs
crates/rpc/src/debug/: endpoints.rs  error.rs  mod.rs  tracer.rs
crates/rpc/src/eth/: endpoints.rs  error.rs  helpers.rs  mod.rs
crates/rpc/src/inspect/: db.rs  endpoints.rs  mod.rs
crates/rpc/src/interest/: buffer.rs  filters.rs  kind.rs  mod.rs  subs.rs
crates/rpc/src/net/: mod.rs
crates/rpc/src/signet/: endpoints.rs  error.rs  mod.rs
crates/rpc/src/trace/: endpoints.rs  error.rs  mod.rs  types.rs
crates/rpc/src/web3/: mod.rs
crates/rpc/tests/: eth_rpc.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs
crates/storage/src/cold/: conformance.rs  mod.rs  request.rs  traits.rs
crates/storage/src/cold/impls/: mem.rs  mod.rs
crates/storage/src/cold/task/: handle.rs  runner.rs
crates/storage/src/hot/: conformance.rs  db.rs  db_traits.rs  error.rs  mdbx.rs  mem.rs  mod.rs  reth_impl.rs  revm.rs  traits.rs
crates/storage/src/hot/db/: consistent.rs  errors.rs  inconsistent.rs  mod.rs  read.rs
crates/storage/src/hot/impls/: mdbx.rs  mem.rs  mod.rs
crates/storage/src/hot/impls/mdbx/: cursor.rs  db_info.rs  error.rs  mod.rs  test_utils.rs  tx.rs
crates/storage/src/hot/model/: db_traits.rs  error.rs  mod.rs  revm.rs  traits.rs  traverse.rs
crates/storage/src/hot/ser/: impls.rs  mod.rs  reth_impls.rs  traits.rs
crates/storage/src/hot/tables/: definitions.rs  macros.rs  mod.rs
crates/storage/src/ser/: impls.rs  mod.rs  reth_impls.rs  traits.rs
crates/storage/src/tables/: hot.rs  macros.rs  mod.rs
docs/superpowers/plans/: 2026-03-13-async-alias-oracle.md  2026-03-13-host-context-adapter.md  2026-03-17-reorg-ring-buffer-and-log-type.md  2026-03-25-parity-trace-namespace.md
docs/superpowers/specs/: 2026-03-13-host-context-adapter-design.md  2026-03-13-rpc-host-notifier-design.md  2026-03-17-reorg-ring-buffer-and-log-type-design.md  2026-03-25-parity-trace-namespace-design.md
tests/artifacts/: local.genesis.json
