[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.16.0-rc.5"
edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/signet-sdk"
repository = "https://github.com/init4tech/signet-sdk"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[workspace.dependencies]
signet-blobber = { version = "0.16.0-rc.5", path = "crates/blobber" }
signet-block-processor = { version = "0.16.0-rc.5", path = "crates/block-processor" }
signet-db = { version = "0.16.0-rc.5", path = "crates/db" }
signet-genesis = { version = "0.16.0-rc.5", path = "crates/genesis" }
signet-node = { version = "0.16.0-rc.5", path = "crates/node" }
signet-node-config = { version = "0.16.0-rc.5", path = "crates/node-config" }
signet-node-tests = { version = "0.16.0-rc.5", path = "crates/node-tests" }
signet-node-types = { version = "0.16.0-rc.5", path = "crates/node-types" }
signet-rpc = { version = "0.16.0-rc.5", path = "crates/rpc" }

init4-bin-base = { version = "0.18.0-rc.1", features = ["alloy"] }

signet-bundle = "0.16.0-rc.5"
signet-constants = "0.16.0-rc.5"
signet-evm = "0.16.0-rc.5"
signet-extract = "0.16.0-rc.5"
signet-test-utils = "0.16.0-rc.5"
signet-tx-cache = "0.16.0-rc.5"
signet-types = "0.16.0-rc.5"
signet-zenith = "0.16.0-rc.5"
signet-journal = "0.16.0-rc.5"

# ajj
ajj = { version = "0.3.4" }

# trevm
trevm = { version = "0.33.0", features = ["full_env_cfg"] }
revm-inspectors = "0.33.0" # should be 1 more than trevm version, usually

# Alloy periphery crates
alloy = { version = "1.4.0", features = [
    "full",
    "rpc-types-beacon",
    "rpc-types-mev",
    "genesis",
    "arbitrary",
] }
alloy-contract = { version = "1.4.0", features = ["pubsub"] }

# Reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }

# need to pin vergen to avoid multiple versions of virgen-lib
vergen = "=9.0.6"

# Foundry periphery
foundry-blob-explorers = "0.17"

# Async
tokio = { version = "1.43.0", features = ["macros"] }
async-trait = "0.1.87"

# Pinned for compatibility with reth
parking_lot = "0.12"

# Misc
chrono = "0.4.38"
clap = "4"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = { package = "const-hex", version = "1.10", default-features = false, features = [
    "alloc",
] }
itertools = "0.14.0"
metrics = "0.24.2"
openssl = { version = "0.10", features = ["vendored"] }
proptest = "1.6.0"
reqwest = "0.12.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
smallvec = "1.15.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
url = "2.5.4"
uuid = "1.16.0"

# Test Utils
alloy-rlp = "0.3.11"
tempfile = "3.17.0"

# [patch.crates-io]
# signet-bundle = { path = "../sdk/crates/bundle"}
# signet-constants = { path = "../sdk/crates/constants"}
# signet-evm = { path = "../sdk/crates/evm"}
# signet-extract = { path = "../sdk/crates/extract"}
# signet-journal = { path = "../sdk/crates/journal"}
# signet-test-utils = { path = "../sdk/crates/test-utils"}
# signet-tx-cache = { path = "../sdk/crates/tx-cache"}
# signet-types = { path = "../sdk/crates/types"}
# signet-zenith = { path = "../sdk/crates/zenith"}

# init4-bin-base = { path = "../shared" }
