[package]
name = "signet-block-processor"
description = "High-level flows for Signet blob extraction and EVM invocation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-evm.workspace = true
signet-extract.workspace = true
signet-journal.workspace = true

init4-bin-base.workspace = true

signet-blobber.workspace = true
signet-db.workspace = true
signet-node-types.workspace = true

reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true

tracing.workspace = true
eyre.workspace = true
alloy.workspace = true
signet-constants.workspace = true
trevm.workspace = true
reth-chainspec.workspace = true
