[package]
name = "signet-block-processor"
description = "High-level flows for Signet blob extraction and EVM invocation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-constants.workspace = true
signet-evm.workspace = true
signet-extract.workspace = true
signet-journal.workspace = true
signet-types.workspace = true

init4-bin-base.workspace = true

trevm.workspace = true

signet-blobber.workspace = true
signet-db.workspace = true
signet-node-types.workspace = true

alloy.workspace = true

reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true

eyre.workspace = true
metrics.workspace = true
tracing.workspace = true
