[package]
name = "signet-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-node-types.workspace = true

signet-evm.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

trevm.workspace = true

alloy.workspace = true

reth.workspace = true
reth-db.workspace = true
reth-prune-types.workspace = true

itertools.workspace = true
serde.workspace = true
tracing.workspace = true
futures-util = "0.3.31"
tokio.workspace = true
auto_impl = "1.3.0"
