[package]
name = "signet-host-reth"
description = "Reth ExEx implementation of the `HostNotifier` trait for signet-node."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-node-types.workspace = true
signet-blobber.workspace = true
signet-extract.workspace = true
signet-rpc.workspace = true
signet-block-processor.workspace = true
signet-types.workspace = true

alloy.workspace = true
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-stages-types.workspace = true

eyre.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
