[package]
name = "signet-journaler"
description = "Manager replayable journals for signet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trevm.workspace = true
