[package]
name = "signet-node-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-blobber.workspace = true
signet-types.workspace = true

init4-bin-base.workspace = true

reth.workspace = true
reth-chainspec.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
alloy.workspace = true

eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
tracing.workspace = true
trevm.workspace = true
signet-genesis.workspace = true
signet-block-processor.workspace = true

tempfile = { workspace = true, optional = true }

[features]
test_utils = ["dep:tempfile"]
