[package]
name = "signet-node-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-blobber.workspace = true
signet-storage.workspace = true
signet-types.workspace = true

init4-bin-base.workspace = true

alloy.workspace = true

eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio-util.workspace = true
tracing.workspace = true
signet-genesis.workspace = true


[features]
test_utils = []
postgres = ["signet-storage/postgres"]
sqlite = ["signet-storage/sqlite"]
