[package]
name = "signet-node-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-node.workspace = true
signet-node-config = { workspace = true, features = ["test_utils"] }

signet-cold = { workspace = true, features = ["in-memory"] }
signet-constants.workspace = true
signet-evm.workspace = true
signet-hot = { workspace = true, features = ["in-memory"] }
signet-storage.workspace = true
signet-storage-types.workspace = true
signet-test-utils.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

alloy.workspace = true

reth.workspace = true
reth-exex.workspace = true
reth-exex-test-utils.workspace = true
reth-node-api.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
signet-genesis.workspace = true

serde_json.workspace = true
serial_test = "3.2.0"
