[package]
name = "signet-node-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
signet-blobber = { workspace = true, features = ["test-utils"] }
signet-node.workspace = true
signet-node-config = { workspace = true, features = ["test_utils"] }
signet-node-types.workspace = true
signet-rpc.workspace = true

signet-cold = { workspace = true, features = ["in-memory"] }
signet-constants.workspace = true
signet-extract.workspace = true
signet-genesis.workspace = true
signet-hot = { workspace = true, features = ["in-memory"] }
signet-storage.workspace = true
signet-storage-types.workspace = true
signet-test-utils.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

alloy.workspace = true
eyre.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
serial_test = "3.2.0"
