[package]
name = "signet-node-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-trie-db.workspace = true

tokio.workspace = true