[package]
name = "signet-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-block-processor.workspace = true
signet-extract.workspace = true
signet-node-config.workspace = true
signet-rpc.workspace = true
signet-hot.workspace = true
signet-storage.workspace = true
signet-storage-types.workspace = true

signet-blobber.workspace = true
signet-tx-cache.workspace = true
signet-types.workspace = true

ajj.workspace = true
alloy.workspace = true
axum = "0.8.1"
interprocess = { version = "2.2.2", features = ["tokio"] }

reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true

trevm.workspace = true

eyre.workspace = true
futures-util.workspace = true
metrics.workspace = true
reqwest.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }
tracing.workspace = true
