[package]
name = "signet-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-node-types.workspace = true
signet-db.workspace = true

signet-bundle.workspace = true
signet-evm.workspace = true
signet-tx-cache.workspace = true
signet-types.workspace = true

ajj.workspace = true
trevm.workspace = true

alloy.workspace = true
revm-inspectors.workspace = true

reth.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-db-common.workspace = true
reth-node-api.workspace = true
reth-rpc-eth-api.workspace = true

dashmap = "6.1.0"
eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util = "0.7.13"
tracing.workspace = true
serde_json.workspace = true
futures-util = "0.3.31"
itertools.workspace = true
signet-block-processor.workspace = true

[dev-dependencies]
signet-zenith.workspace = true
signet-constants.workspace = true
chrono.workspace = true
