[package]
name = "signet-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Ethereum JSON-RPC server backed by signet-storage"

[dependencies]
signet-storage.workspace = true
signet-cold.workspace = true
signet-hot.workspace = true
signet-storage-types.workspace = true
signet-evm.workspace = true
trevm = { workspace = true, features = ["call", "estimate_gas"] }
signet-types.workspace = true
signet-tx-cache.workspace = true
signet-bundle.workspace = true
alloy.workspace = true
ajj.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
dashmap = "6.1.0"
revm-inspectors.workspace = true
itertools.workspace = true
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
interprocess = { version = "2.2.2", features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
signet-cold = { workspace = true, features = ["test-utils"] }
signet-hot = { workspace = true, features = ["test-utils"] }
signet-storage.workspace = true
signet-storage-types.workspace = true
signet-constants.workspace = true
alloy.workspace = true
serde_json.workspace = true
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http = "1"
trevm.workspace = true
