[package]
name = "signet-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
auto_impl = "1.3.0"
bytes = "1.11.0"
reth.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-db-api.workspace = true
signet-db.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
trevm.workspace = true

reth-libmdbx = { workspace = true, optional = true }
page_size = { version = "0.6.0", optional = true }
dashmap = "6.1.0"
tempfile = { workspace = true, optional = true }
itertools.workspace = true


[dev-dependencies]
serial_test = "3.3.1"
tempfile.workspace = true

[features]
default = ["mdbx", "in-mem"]
mdbx = ["dep:reth-libmdbx", "impls", "dep:page_size"]
in-mem = ["impls"]
test-utils = ["in-mem", "dep:tempfile"]
impls = []
